<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="mediaLibrary">Медиатека</string>
    <string name="darktheme">Темная тема</string>
    <string name="share" >Поделиться приложением</string>
    <string name="support" >Написать в поддержку</string>
    <string name="user_agreement" >Пользовательское соглашение</string>
    <string name="switchcompat">SwitchCompat</string>
    <string name="off">OFF</string>
    <string name="offer">https://yandex.ru/legal/practicum_offer</string>
    <string name="eMailAddresTechSupport">mailto:zinovev.ivan@mail.ru</string>
    <string name="templeteTextMessage">Привет, Android-разработка — это круто!</string>
    <string name="templeteThemeMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="messageShare">https://practicum.yandex.ru/android-developer/</string>
    <string name="trackname">Имя трека</string>
    <string name="artict_name">Исполнитель</string>
    <string name="time">4:45</string>
    <string name="no_result">Ничего не нашлось</string>
    <string name="update">Обновить</string>
    <string name="trouble_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="example_track_time">00:00</string>
    <string name="example_album_name">Yesterday (Remastered 2009)</string>
    <string name="example_year">1965</string>
    <string name="example_genre">Rock</string>
    <string name="example_country">Великобритания</string>

</resources>