<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/offset_4">

        <TextView
            style="@style/PanelHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:paddingTop="@dimen/offset_10"
            android:paddingBottom="@dimen/offset_12"
            android:paddingStart="@dimen/offset_12"
            android:paddingEnd="@dimen/offset_62"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/offset_16"
        android:paddingBottom="@dimen/offset_26">

        <Button
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/buttonSearch"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cornerRadius="@dimen/radius_16"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/offset_16"
            android:layout_weight="1"
            android:text="@string/search"
            app:icon="@drawable/ic_magnifier"
            app:iconTint="@color/black"/>

        <Button
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/buttonMedia"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cornerRadius="@dimen/radius_16"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/offset_16"
            android:layout_weight="1"
            app:backgroundTint="@color/white"
            android:text="@string/mediaLibrary"
            app:icon="@drawable/ic_music"
            app:iconTint="@color/black"/>

        <Button
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:id="@+id/buttonSettings"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cornerRadius="@dimen/radius_16"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            android:layout_marginTop="@dimen/offset_16"
            android:layout_weight="1"
            android:text="@string/settings"
            app:icon="@drawable/ic_gearwheel"
            app:iconTint="@color/black"/>
    </LinearLayout>
</LinearLayout>
