<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageAlbum"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_music"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_corners"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/trackName"
            style="@style/TextClassicStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/offset_8"
            android:paddingTop="@dimen/size_16"
            android:text="@string/trackname"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artistName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/artict_name"
                android:textColor="?attr/track"
                android:paddingStart="@dimen/offset_8"
                android:textSize="11sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point"/>

            <TextView
                android:id="@+id/trackTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/time"
                android:textColor="?attr/track"
                android:textSize="11sp"/>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/choice_Track_in_Recycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_forward"
        android:layout_gravity="center"
        android:padding="@dimen/offset_12"/>

</LinearLayout>